--- a/public/index.html
+++ b/public/index.html
@@ -537,11 +537,10 @@ MongoDB: Replication.
 
 ---
 name: terminal
-# Terminal
+# <span>Terminal</span>
 
-<p id="title"></p>
 
-<div id="container"></div>
+<div id="redis-term"></div>
 
 <div style="clear: both"></div>
 
@@ -549,6 +548,7 @@ name: terminal
 
 <p>
   <a href="#" id="resume">Resume</a> navigation
+  <a href="#" id="ls">ls</a>
 </p>
 
 
@@ -580,7 +580,7 @@ class: pushed
 ##Send søknad med CV og karakterer (betyg) til jobb@bekk.no.
 
 *.lightbrown[P.S. Vi skjønner svensk]*
-    </textarea>
+</textarea>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/term.js"></script>
