--- a/public/index.html
+++ b/public/index.html
@@ -537,22 +537,46 @@ class: round
 
 ---
 name: redis-term
-class: cols white
+class: cols three white
 # <span>Redis</span>
 
-
 <div id="redis-term"></div>
-
 <div style="clear: both"></div>
 
 
+<div class="col">
+  <h3><span>Lister</span></h3>
+  <a href="#" class="redis-cmd">lpush protagonists 'trevor'</a><br />
+  <a href="#" class="redis-cmd">lpush protagonists 'michael'</a><br />
+  <a href="#" class="redis-cmd">lpush protagonists 'franklin'</a><br />
+  <a href="#" class="redis-cmd">llen protagonists</a><br />
+  <a href="#" class="redis-cmd">lrange protagonists 0 -1</a><br />
+  <a href="#" class="redis-cmd">lindex protagonists 2</a><br />
+  <a href="#" class="redis-cmd">lrem protagonists 1 'franklin'</a><br />
+  <a href="#" class="redis-cmd">lpop protagonists</a><br />
+  <a href="#" class="redis-cmd">rpoplpush protagonists antagonists</a><br />
+  <a href="#" class="redis-cmd">lrange antagonists 0 -1</a><br />
+</div>
+<div class="col">
+  <h3><span>Set</span></h3>
+  <a href="#" class="redis-cmd">sadd prot 'franklin'</a><br />
+  <a href="#" class="redis-cmd">sadd prot 'michael'</a><br />
+  <a href="#" class="redis-cmd">scard prot</a><br />
+  <a href="#" class="redis-cmd">smembers prot</a><br />
+  <a href="#" class="redis-cmd">sadd ant 'trevor'</a><br />
+  <a href="#" class="redis-cmd">sunion prot ant</a><br />
+  <a href="#" class="redis-cmd">smembers ant</a><br />
+  <a href="#" class="redis-cmd">sunionstore characters prot ant</a><br />
+  <a href="#" class="redis-cmd">smembers characters</a><br />
+</div>
 
-<ul id="redis-list"></ul>
+<div class="col">
+  <ul id="redis-list"></ul>
+</div>
 
-<p>
-  <a href="#" id="resume">Resume</a>
-  <a href="#" class="redis-cmd" data-command="foo">ls</a>
-</p>
+<a href="#" class='pushed' id="resume">Resume</a>
+
+
 
 
 ---
